--- a/the-best-practices-to-stop-phishing-attacks/stop-phishing-attacks.html
+++ b/the-best-practices-to-stop-phishing-attacks/stop-phishing-attacks.html
@@ -35,20 +35,20 @@
 <br><h2>1. Be Wary Of Hyperlinks And Attachments In Any Email</h2>
 <br><p><img style="display: block; margin-left: auto; margin-right: auto;" src="phishing-attacks-01.jpg" alt="phishing-attacks" /></p><br>
 <p>Emails asking the reader to click on a link or download an attachment should not be entertained unless the email is expected and sent by a known sender, such as for <strong>email verification</strong> by a service that the user signed up for a few moments ago.</p>
-<br><h2>2. Backup System Copies</h2><br>
+<br><h2>2. Backup System Copies</h2>
 <p>A backup of system copies allows IT personnel to fall back to an uncompromised system state if a phishing attack is ever successful and <a href="https://www.malwarebytes.com/malware">malware</a> or other malicious software are introduced into the system infrastructure.</p>
-<br><h2>3. Ensure HTTPS Connections</h2><br>
+<br><h2>3. Ensure HTTPS Connections</h2>
 <p>Users must ensure the presence of &lsquo;HTTPS&rsquo; (and not &lsquo;HTTP&rsquo; without the &lsquo;S&rsquo;) when transmitting <strong>sensitive data online</strong>. This helps ensure that the information being conveyed is passing through a secured channel.</p>
-<br><h2>4. Avoid Entering Credentials In A Pop-Up Window</h2><br>
+<br><h2>4. Avoid Entering Credentials In A Pop-Up Window</h2>
 <p>Pop-up windows are a common tool used by phishers. <em>Unless the user&rsquo;s website is completely trustworthy, information should never be entered into a pop-up window. </em>Most browsers allow users to restrict pop-up windows from showing up and allow exceptions to be made for trusted domains.</p>
-<br><h2>5. Provide Employee Education And Training</h2><br>
+<br><h2>5. Provide Employee Education And Training</h2>
 <p>Keeping employees informed about the <strong>latest phishing scams</strong> and the techniques and technologies that the company is using to prevent them is very important. Outsourcing this task to a specialist can also be considered, especially as companies move toward a remote work environment.</p>
-<br><h2>6. Install A Robust Firewall</h2><br>
+<br><h2>6. Install A Robust Firewall</h2>
 <p>A reliable <a href="https://www.educative.io/answers/how-a-firewall-protects-a-network">firewall protects</a> all users on the corporate network from malicious code that might be sent in through a phishing email.&nbsp;</p>
 <br><p><img style="display: block; margin-left: auto; margin-right: auto;" src="phishing-attacks-02.jpg" alt="phishing-attacks" /></p><br>
-<h2>7. Use Anti-Spam Solutions</h2><br>
+<h2>7. Use Anti-Spam Solutions</h2>
 <p><strong>Anti-spam software protects </strong>against phishing attacks by filtering out emails from known phishers and other cybercriminals. <em>Without this software, these emails might show up directly in employees&rsquo; inboxes, increasing the chances of being considered legitimate.</em></p>
-<br><h2>8. Provide Antivirus Protection</h2><br>
+<br><h2>8. Provide Antivirus Protection</h2>
 <p>DNS pharming is a new type of phishing attack that doesn't use <strong>pop-up windows</strong> or carefully-crafted emails. Instead, it involves 'poisoning' a person's local DNS server. If the attack is successful, the user will be redirected to a fake website when they try to visit the real one.</p>
 <p>Administrators can protect against DNS pharming attacks by 'locking down' <a href="https://www.cloudflare.com/learning/dns/what-is-a-dns-server/">DNS servers</a> using security measures. By doing this, they can make sure that only authorized users can access and change DNS records.</p>
 <p>In summary, the Phishing Scam is everywhere. It is becoming more innovative and harder to detect, however, there are some simple tips that can help protect you. <em>First, never click on links in emails that ask you to update personal information or financial information. </em>Always go directly to the company's website and check your account. You should also be cautious of opening attachments in emails.</p>
